Refactoring code (#2)
* refactoring

* some refactoring